初始化taoleb个人网站项目
- 基于vhAstro-Theme的优雅博客主题
- 修复侧边栏头像比例失真问题
- 配置个人信息和网站设置
- 添加个人博客文章内容
- 完善README文档说明

--- a/src/components/Aside/Aside.less
+++ b/src/components/Aside/Aside.less
@@ -53,6 +53,7 @@ aside.vh-aside {
         height: 6.36rem;
         border-radius: 1rem;
         overflow: hidden;
+        object-fit: cover;
       }
 
       &>.vh-aside-auther {
