更新博客项目：添加哲学页面、项目页面、博客分享页面等功能

--- a/src/components/Head/Head.astro
+++ b/src/components/Head/Head.astro
@@ -59,6 +59,7 @@ import "@/styles/Base.less";
 	{DNSOptimization.map((url: string) => <link rel="preconnect" href={url} />)}
 	<!-- LINK 标签 -->
 	<link rel="canonical" href={canonicalURL} />
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
 	<slot />
 </head>
