--- a/src/components/Aside/Aside.less
+++ b/src/components/Aside/Aside.less
@@ -196,7 +196,7 @@ aside.vh-aside {
           width: 1.18rem;
           height: 1.18rem;
           object-fit: contain;
-          animation: talking-tag-active 0.18s ease-in-out infinite;
+          /* talking-tag-active 动画已移除 */
         }
       }
 
