--- a/src/styles/Base.less
+++ b/src/styles/Base.less
@@ -353,46 +353,4 @@ html.is-animating {
 
 
 // 动画效果
-@keyframes talking-tag-active {
-	0% {
-		transform: translateX(0);
-	}
-
-	25% {
-		transform: translateX(-1.66px);
-	}
-
-	50% {
-		transform: translateX(1.66px);
-	}
-
-	75% {
-		transform: translateX(-1.66px);
-	}
-
-	100% {
-		transform: translateX(0);
-	}
-}
-
-@-webkit-keyframes talking-tag-active {
-	0% {
-		transform: translateX(0);
-	}
-
-	25% {
-		transform: translateX(-1.66px);
-	}
-
-	50% {
-		transform: translateX(1.66px);
-	}
-
-	75% {
-		transform: translateX(-1.66px);
-	}
-
-	100% {
-		transform: translateX(0);
-	}
-}
+/* talking-tag-active 动画已移除 */
