--- a/src/pages/categories/[...categories].astro
+++ b/src/pages/categories/[...categories].astro
@@ -1,22 +1,37 @@
 ---
-import { getCategoriesList } from "@/utils/getArchive";
 import { getCollection } from "astro:content";
+import moveTopToFirst from "@/utils/moveTopToFirst";
 export async function getStaticPaths(): Promise<any> {
 	const posts = await getCollection("blog");
 	return posts.map((post: any) => ({ params: { categories: post.data.categories }, props: post }));
 }
-// 获取分类列表
+// 获取分类下的文章
 const { categories } = Astro.params;
-const articleList = await getCategoriesList(categories);
+const allPosts = await getCollection("blog");
+const categoryPosts = allPosts.filter(post => post.data.categories === categories && !post.data.hide);
+const sortedPosts = categoryPosts.sort((a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
+const finalPosts = moveTopToFirst(sortedPosts);
+
 // 页面 Info
 import SITE_CONFIG from "@/config";
 const { Description } = SITE_CONFIG;
 // 公共 Layout
 import Layout from "@/layouts/Layout/Layout.astro";
-// 文章列表组件
-import Archive from "@/components/Archive/Archive.astro";
+// 文章卡片组件
+import ArticleCard from "@/components/ArticleCard/ArticleCard.astro";
 ---
 
 <Layout title={`分类 ${categories} 下的文章`} description={Description} activeNav="categories">
-	<Archive articleList={articleList} />
+	<section class="vh-tools-main vh-animation vh-animation-init">
+		<header class="vh-page-header">
+			<h1>分类：{categories} 📂</h1>
+			<p>共 {finalPosts.length} 篇文章</p>
+		</header>
+		<main class="article-list-main">
+			<section class="article-list">
+				<!-- 文章列表 -->
+				{finalPosts.map((post, index) => <ArticleCard post={post} index={index} />)}
+			</section>
+		</main>
+	</section>
 </Layout>
